belieme-server/src/main/java/com/example/beliemeserver/error/exception/ForbiddenException.java
package com.example.beliemeserver.error.exception;

import com.example.beliemeserver.error.info.CommonErrorInfo;

public class ForbiddenException extends ServerException {
    public ForbiddenException() {
        super(CommonErrorInfo.FORBIDDEN);
    }
}
